# kube-website-i18n

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yaml  fetch.yaml  sync-gh-pages.yaml
data/cache/: last_commit.txt
data/derived/classification/: _common-resources.json  blog.json  case-studies.json  community.json  examples.json  includes.json  releases.json
data/master/: all_files.csv  pull_requests.json
data/output/content_type/: _common-resources.json  blog.json  case-studies.json  community.json  examples.json  includes.json  partners.json  releases.json  training.json
data/output/detailed/: _common-resources.json  blog.json  careers.json  case-studies.json  community.json  examples.json  includes.json  partners.json  releases.json  training.json
data/output/matrix/: _common-resources.json  (+10 more)
data/temp/: _common-resources_data.txt  blog_data.txt  case-studies_data.txt  community_data.txt  examples_data.txt  includes_data.txt  partners_data.txt  releases_data.txt  training_data.txt
scripts/: classify.sh  fetch.sh  format-blog.sh  normalize.sh
scripts/python/: exporter.py  format.py  history.py  main.py  models.py  translation_status.py
scripts/shell/: collect_all_files.sh  fetch.sh  fetch_pr.sh
web/: .prettierrc.mjs  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.mjs
web/.storybook/: main.ts  preview.tsx
web/src/: App.tsx  Router.tsx  theme.ts
web/test-utils/: render.tsx
(+264 files in other folders)
