[project]
name = "default"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."

authors = [{ name = "a5chin", email = "g140702@gmail.com" }]
maintainers = [{ name = "a5chin",  email = "g140702@gmail.com" }]

requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "mkdocs-material>=9.5.50",
    "pre-commit>=4.1.0",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
